fix: text overflow on folder items

--- a/pages/media-library/components/folder-tree/css/bookmark.scss
+++ b/pages/media-library/components/folder-tree/css/bookmark.scss
@@ -76,6 +76,9 @@
 }
 
 .godam-bookmark-tab__list {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     .tree-item {
         padding-left: 0.5rem;
