--- a/pages/media-library/components/folder-tree/css/tree-item.scss
+++ b/pages/media-library/components/folder-tree/css/tree-item.scss
@@ -91,11 +91,19 @@
 		align-items: center;
 		gap: 0.5rem;
 		width: 100%;
+
+		svg {
+			overflow: initial;
+		}
 	}
 
 	&__text {
 		font-size: 0.875rem;
 		color: #4a4a4a;
+		white-space: normal;
+		overflow-wrap: break-word;
+		word-break: break-word;
+		max-width: 150px;
 	}
 
 	&__spacer {
